Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Alpha
-
None
-
7c6625b105511191f739d07dc658094ff6f682ac
Description
QtCreator since 3.5 and Qt 5.5 uses OpenGL every time, because Welcome Page uses QQuickWidget instead of QQuickWindow by default. This results in a significant decrease in performance and compatibility issues. Older versions uses OpenGL only on Welcome Page - this doesn't affect the source code editor and QtWidgets designer.
And second thing: I know that QML designer and QML profiler uses OpenGL, but QML profiler shouldn't be selected by default in non-QML project, because it also forces whole QtCreator to use OpenGL. Many users don't know why QtCreator slows down or why it has graphical glitches, they just says that it is normal that new software is slower.
This bug can be relative to: QTCREATORBUG-15084.
The attachment contains four screens (I chose old laptop (C2D 2x2GHz, old Intel GPU), because it can show the issue better):
- QtCreator-deceleration-CPU.png - OpenGL, the CPU load during scrolling up and down many lines of C++ code (about 100% CPU core usage),
- QtCreator-deceleration-GPU.png - OpenGL, huge GPU usage, the same sa above,
- QtCreator-no-opengl-CPU.png - no-OpenGL, CPU core usage is ~75% during the same operation as in first screen,
- QtCreator-no-opengl-GPU.png - no-OpenGL, GPU is not used by raster paint engine, and it can be much faster than OpenGL for rendering 2D!
Raster engine was smoother during scrolling.
Since the newest version I must disable the Welcome Page, because I don't like unnecessary glitches slows down.
Using new Qt features I noticed, that OpenGL is for rotating, scaling and 3D, not for 2D, and it always slows down not matter how the PC is fast.
Attachments
Issue Links
- replaces
-
QTCREATORBUG-15012 Regressed UI performance in VirtualBox Ubuntu guest in version > 3.4.1
-
- Closed
-
-
QTCREATORBUG-15247 qt creator
-
- Closed
-
-
QTCREATORBUG-15921 Performance regression after rebuilding QtC with Qt 5.5
-
- Closed
-