src/plugins/platforms/xcb/qxcbintegration.cpp
@@ -1257,6 +1257,12 @@ case|:
 return|return
 literal|true
 return|;
+case|case
+name|SwitchableWidgetComposition
+case|:
+return|return
+literal|true
+return|;
 default|default:
 return|return
 name|QPlatformIntegration
